<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:padding="32dp"
    tools:context=".presentation.fragments.GameModeFragment">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.74" />

    <ImageView
        android:id="@+id/casual_button"
        android:layout_width="340dp"
        android:layout_height="64dp"
        android:layout_marginTop="15dp"
        android:contentDescription="@string/casual_mode_button"
        android:src="@drawable/button"
        app:layout_constraintBottom_toTopOf="@id/survival_mode_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/gl" />

    <TextView
        android:id="@+id/casual_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/casual"
        android:textColor="@color/white"
        android:textSize="26sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/casual_button"
        app:layout_constraintEnd_toEndOf="@id/casual_button"
        app:layout_constraintStart_toStartOf="@id/casual_button"
        app:layout_constraintTop_toTopOf="@id/casual_button" />

    <ImageView
        android:id="@+id/survival_mode_button"
        android:layout_width="340dp"
        android:layout_height="64dp"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="15dp"
        android:contentDescription="@string/survival_mode_button"
        android:src="@drawable/button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/casual_button" />

    <TextView
        android:id="@+id/survival_mode_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/survival"
        android:textColor="@color/white"
        android:textSize="26sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/survival_mode_button"
        app:layout_constraintEnd_toEndOf="@id/survival_mode_button"
        app:layout_constraintStart_toStartOf="@id/survival_mode_button"
        app:layout_constraintTop_toTopOf="@id/survival_mode_button" />

</androidx.constraintlayout.widget.ConstraintLayout>